Bug 1535853 - Align the buttons in the attachment reminder bar. r+a=jorgk

--- a/mail/themes/windows/mail/messenger.css
+++ b/mail/themes/windows/mail/messenger.css
@@ -271,7 +271,7 @@ button[type="menu-button"] > button {
   }
 }
 
-.notification-button {
+button.notification-button {
   margin-bottom: 1px;
 }
 
